--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,18 +1,34 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="b4b1b9">  <td>25/02/22 18:03:58</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper, io.cucumber.testng.FeatureWrapper)[pri:0, instance:runnerFiles.TestRunner@3e2e18f2]">runScenario</td> 
-  <td>main@1147580192</td>   <td></td> </tr>
-<tr bgcolor="b4b1b9">  <td>25/02/22 18:04:00</td>   <td>2565</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper, io.cucumber.testng.FeatureWrapper)[pri:0, instance:runnerFiles.TestRunner@3e2e18f2]">runScenario</td> 
-  <td>main@1147580192</td>   <td></td> </tr>
-<tr bgcolor="b4b1b9">  <td>25/02/22 18:04:01</td>   <td>3080</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper, io.cucumber.testng.FeatureWrapper)[pri:0, instance:runnerFiles.TestRunner@3e2e18f2]">runScenario</td> 
-  <td>main@1147580192</td>   <td></td> </tr>
-<tr bgcolor="b4b1b9">  <td>25/02/22 18:04:01</td>   <td>3587</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper, io.cucumber.testng.FeatureWrapper)[pri:0, instance:runnerFiles.TestRunner@3e2e18f2]">runScenario</td> 
-  <td>main@1147580192</td>   <td></td> </tr>
-<tr bgcolor="b4b1b9">  <td>25/02/22 18:04:02</td>   <td>4055</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper, io.cucumber.testng.FeatureWrapper)[pri:0, instance:runnerFiles.TestRunner@3e2e18f2]">runScenario</td> 
-  <td>main@1147580192</td>   <td></td> </tr>
-<tr bgcolor="b4b1b9">  <td>25/02/22 18:03:57</td>   <td>-578</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AbstractTestNGCucumberTests.setUpClass(org.testng.ITestContext)[pri:0, instance:runnerFiles.TestRunner@3e2e18f2]">&gt;&gt;setUpClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1147580192</td>   <td></td> </tr>
-<tr bgcolor="b4b1b9">  <td>25/02/22 18:04:02</td>   <td>4089</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AbstractTestNGCucumberTests.tearDownClass()[pri:0, instance:runnerFiles.TestRunner@3e2e18f2]">&lt;&lt;tearDownClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1147580192</td>   <td></td> </tr>
+<tr bgcolor="ddaeda">  <td>25/02/23 02:04:10</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper, io.cucumber.testng.FeatureWrapper)[pri:0, instance:runnerFiles.TestRunner@72a7c7e0]">runScenario</td> 
+  <td>main@7967307</td>   <td></td> </tr>
+<tr bgcolor="ddaeda">  <td>25/02/23 02:04:13</td>   <td>2303</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper, io.cucumber.testng.FeatureWrapper)[pri:0, instance:runnerFiles.TestRunner@72a7c7e0]">runScenario</td> 
+  <td>main@7967307</td>   <td></td> </tr>
+<tr bgcolor="ddaeda">  <td>25/02/23 02:04:13</td>   <td>2700</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper, io.cucumber.testng.FeatureWrapper)[pri:0, instance:runnerFiles.TestRunner@72a7c7e0]">runScenario</td> 
+  <td>main@7967307</td>   <td></td> </tr>
+<tr bgcolor="ddaeda">  <td>25/02/23 02:04:14</td>   <td>3880</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper, io.cucumber.testng.FeatureWrapper)[pri:0, instance:runnerFiles.TestRunner@72a7c7e0]">runScenario</td> 
+  <td>main@7967307</td>   <td></td> </tr>
+<tr bgcolor="ddaeda">  <td>25/02/23 02:04:15</td>   <td>4261</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper, io.cucumber.testng.FeatureWrapper)[pri:0, instance:runnerFiles.TestRunner@72a7c7e0]">runScenario</td> 
+  <td>main@7967307</td>   <td></td> </tr>
+<tr bgcolor="ddaeda">  <td>25/02/23 02:04:15</td>   <td>4660</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper, io.cucumber.testng.FeatureWrapper)[pri:0, instance:runnerFiles.TestRunner@72a7c7e0]">runScenario</td> 
+  <td>main@7967307</td>   <td></td> </tr>
+<tr bgcolor="ddaeda">  <td>25/02/23 02:04:16</td>   <td>5575</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper, io.cucumber.testng.FeatureWrapper)[pri:0, instance:runnerFiles.TestRunner@72a7c7e0]">runScenario</td> 
+  <td>main@7967307</td>   <td></td> </tr>
+<tr bgcolor="ddaeda">  <td>25/02/23 02:04:16</td>   <td>5608</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper, io.cucumber.testng.FeatureWrapper)[pri:0, instance:runnerFiles.TestRunner@72a7c7e0]">runScenario</td> 
+  <td>main@7967307</td>   <td></td> </tr>
+<tr bgcolor="ddaeda">  <td>25/02/23 02:04:16</td>   <td>5644</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper, io.cucumber.testng.FeatureWrapper)[pri:0, instance:runnerFiles.TestRunner@72a7c7e0]">runScenario</td> 
+  <td>main@7967307</td>   <td></td> </tr>
+<tr bgcolor="ddaeda">  <td>25/02/23 02:04:16</td>   <td>5677</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper, io.cucumber.testng.FeatureWrapper)[pri:0, instance:runnerFiles.TestRunner@72a7c7e0]">runScenario</td> 
+  <td>main@7967307</td>   <td></td> </tr>
+<tr bgcolor="ddaeda">  <td>25/02/23 02:04:16</td>   <td>5705</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper, io.cucumber.testng.FeatureWrapper)[pri:0, instance:runnerFiles.TestRunner@72a7c7e0]">runScenario</td> 
+  <td>main@7967307</td>   <td></td> </tr>
+<tr bgcolor="ddaeda">  <td>25/02/23 02:04:16</td>   <td>5739</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper, io.cucumber.testng.FeatureWrapper)[pri:0, instance:runnerFiles.TestRunner@72a7c7e0]">runScenario</td> 
+  <td>main@7967307</td>   <td></td> </tr>
+<tr bgcolor="ddaeda">  <td>25/02/23 02:04:16</td>   <td>5768</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.runScenario(io.cucumber.testng.PickleWrapper, io.cucumber.testng.FeatureWrapper)[pri:0, instance:runnerFiles.TestRunner@72a7c7e0]">runScenario</td> 
+  <td>main@7967307</td>   <td></td> </tr>
+<tr bgcolor="ddaeda">  <td>25/02/23 02:04:10</td>   <td>-514</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AbstractTestNGCucumberTests.setUpClass(org.testng.ITestContext)[pri:0, instance:runnerFiles.TestRunner@72a7c7e0]">&gt;&gt;setUpClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@7967307</td>   <td></td> </tr>
+<tr bgcolor="ddaeda">  <td>25/02/23 02:04:16</td>   <td>5797</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AbstractTestNGCucumberTests.tearDownClass()[pri:0, instance:runnerFiles.TestRunner@72a7c7e0]">&lt;&lt;tearDownClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@7967307</td>   <td></td> </tr>
 </table>
